# apertium-fin-est

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-fin-est.est-fin.lrx  apertium-fin-est.est-fin.rlx  apertium-fin-est.est-fin.t1x  apertium-fin-est.est.lexc  apertium-fin-est.fin-est.dix  apertium-fin-est.fin-est.lrx  apertium-fin-est.fin-est.rlx  apertium-fin-est.fin-est.t1x  apertium-fin-est.fin-est.t2x  apertium-fin-est.fin-est.t3x  apertium-fin-est.fin-est.t4x  apertium-fin-est.fin-est.t5x  apertium-fin-est.fin.lexc  apertium-fin-est.fin.twol  configure.ac  gt2apertium.cg3r  modes.xml  pending-tests.sh  wiki-tests.sh
comp/: comp.py  eesti.mrf  soome.biltr  soome.dix  soome.mrf  soome.pchnk  soome.tolge
dev/: est-eng.txt  punctuation.lexc
dev/bidix/: reliable.fin-est.adj.checked  reliable.fin-est.adv.checked  reliable.fin-est.n.checked  reliable.fin-est.vblex.checked  unreliable.fin-est.adj  unreliable.fin-est.n
dev/lexind/: comp.py  ls.py
dev/lexind/dix/: apertium-fin-est.fin-est.dix
dev/lexind/modes/: fin-est-biltrans-ls.mode  fin-est-ls.mode  fin-est-postchunk-ls.mode
dev/lexind/testset/: udtfin.biltr-ls  udtfin.pchnk-ls  udtfin.tolge-ls
dev/lexind/textbook/: soome.biltr-ls  soome.pchnk-ls  soome.tolge-ls
test/: est-fin-biltrans-expected.txt  est-fin-chunker-expected.txt  est-fin-generator-gold.txt  est-fin-pending-chunker-expected.txt  est-fin-pending-generator-expected.txt  est-fin-pending-generator-gold.txt  est-fin-pending-input.txt  est-fin-pending-lex-expected.txt  est-fin-pending-morph-expected.txt  est-fin-pending-postchunk-expected.txt  est-fin-pending-pretransfer-expected.txt  fin-est-chunker-expected.txt  fin-est-morph-expected.txt  fin-est-pending-biltrans-expected.txt  fin-est-pending-disam-expected.txt  fin-est-pending-generator-expected.txt  fin-est-pending-generator-gold.txt  fin-est-pending-input.txt  fin-est-pending-interchunk2-expected.txt  fin-est-pending-morph-expected.txt  fin-est-pending-postchunk-expected.txt  tests.json
texts/: opik.est.26.06.2017  opik.fin.est.26.06.2017  opik.fin.txt  vaalit.est.txt
